--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.1.0",
     "express": "^4.21.1",
+    "firebase": "^11.0.1",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "puppeteer": "^23.6.0",
@@ -27,6 +28,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-modal-video": "^2.0.1"
   },
   "devDependencies": {
